--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,6 +12,30 @@
         <li class="nav-item">
           <%= link_to "About", about_path, class: "nav-link active" %>
         </li>
+        <li class="nav-item">
+          <%= link_to "Login", sign_in_path, class: "nav-link active" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Sign Up", sign_up_path, class: "nav-link active" %>
+        </li>
+      </ul>
+
+      <ul class="navbar-nav ms-auto mb-lg-0">
+        <% if Current.user %>
+          <li class="nav-item ml-2">
+              <%= link_to Current.user.email, edit_password_path, class: "nav-link"%>
+          </li>
+          <li class="nav-item">
+            <%= button_to "Logout", logout_path, method: :delete, class: "btn btn-outline-secondary" %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Login", sign_in_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign Up", sign_up_path, class: "nav-link" %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
