--- a/app/views/password_mailer/reset.html.erb
+++ b/app/views/password_mailer/reset.html.erb
@@ -1,5 +1,4 @@
-<h1>Password#reset</h1>
+<h1>Hi <%= params[:user].email %></h1>
+<h2>Reset Your Password</h2>
 
-<p>
-  <%= @greeting %>, find me in app/views/password_mailer/reset.html.erb
-</p>
+<%= link_to "Reset your password", password_reset_edit_url(token: @token) %>
